--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-crispy-forms==1.13.0
 django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
+gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
 Pillow==9.0.1
