--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==36.0.2
 defusedxml==0.7.1
+dj-database-url==0.5.0
 dj-rest-auth==2.2.3
 Django==3.2.10
 django-allauth==0.49.0
@@ -13,12 +14,14 @@ django-braces==1.15.0
 django-cleanup==5.2.0
 django-crispy-forms==1.13.0
 django-filter==21.1
+django-on-heroku==1.1.2
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
 Pillow==9.0.1
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
@@ -32,4 +35,5 @@ typing_extensions==4.0.1
 tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.9
+whitenoise==6.0.0
 wrapt==1.13.3
